--- a/assets/index.html
+++ b/assets/index.html
@@ -68,6 +68,8 @@
     <button id="evalButton">Eval</button>
     <button id="createAnalyserButton">Analyser++</button>
     <button id="learnerButton">Create Learner</button>
+    <button id="learnerButton2">Learner eval 2</button>
+    <button id="learnerButton3">Learner eval 3</button>
     <button id="mouseButton">Mouse input</button>
     <span id="outputText"></span>
   </div>
@@ -100,12 +102,9 @@
       document.getElementById(elemId).addEventListener("click", callback);
 
     $("playButton", () => {
-      let audioWorkletURL = document.location.origin + "/maxi-processor.js";
-      // let audioWorkletURL = document.location.origin + "/bypass-processor.js";
+      const audioWorkletURL = document.location.origin + "/maxi-processor.js";
       engine = new Engine();
       engine.init("maxi-processor", audioWorkletURL);
-      // engine.init("bypass", audioWorkletURL);
-      engine.subscribeAsyncMessage
       engine.play();
     });
     $("stopButton", () => engine.stop());
@@ -121,7 +120,6 @@
 
     $("evalButton", () => {
       try{
-
         const { errors, dspCode } = compile( editorGrammar.getValue(), editorLivecode.getValue() );
 
         if(dspCode && engine)
@@ -167,16 +165,20 @@
     $("learnerButton", async () => {
 
       learner = new Learner();
-      // refactor addSharedBufferHandler to allow multiple handlers
-      // learner to onSharedBuffer
       if(engine){
         engine.addEventListener('onSharedBuffer', e => learner.createSharedBuffer(e) ); // Engine's SAB emissions subscribed by Learner
         learner.addEventListener('onSharedBuffer', e => engine.pushSharedBuffer(e) );  // Learner's SAB emissions subscribed by Engine
       }
+      await learner.init(document.location.origin); // when Learner initializes
 
-      if( await learner.init(document.location.origin) ){ // IF && WHEN Learner initializes
-        learner.eval('var channel0 = createOutputChannel(0, 1)');
-      }
+    });
+
+    $("learnerButton2", async () => {
+      learner.eval('var channel0 = createOutputChannel(0, 1)');
+    });
+
+    $("learnerButton3", async () => {
+      learner.eval('input = (id,x) => { console.log(id, x); channel0.send(x[0] + 40) }');
     });
 
   </script>
@@ -184,7 +186,7 @@
 
     const setupEditorWithContent = ( elementId, contentFileRelativeURL ) => {
 
-      const editor = CodeMirror.fromTextArea(document.getElementById(elementId), {
+      const editor = CodeMirror.fromTextArea( document.getElementById(elementId), {
         lineNumbers: true
       });
 
