--- a/assets/index.html
+++ b/assets/index.html
@@ -136,6 +136,10 @@
     $("plusButton", () => engine.more());
     $("minusButton", () => engine.less());
     $("loadSamplesButton", () => {
+      engine.loadSample("909.wav", "./audio/909.wav");
+      engine.loadSample("909b.wav", "./audio/909b.wav");
+      engine.loadSample("909closed.wav", "./audio/909closed.wav");
+      engine.loadSample("909open.wav", "./audio/909closed.wav");
       engine.loadSample("crebit2.ogg", "./audio/crebit2.ogg");
       engine.loadSample("kick1.wav", "./audio/kick1.wav");
       engine.loadSample("snare1.wav", "./audio/snare1.wav");
@@ -230,9 +234,11 @@
       return editor;
     }
 
-    const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/default-4-lc.txt');
-    const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/default-grammar.txt');
+    // const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/default-4-lc.txt');
+    // const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/default-grammar.txt');
     const editorJS =       setupEditorWithContent("textArea-js",       '/js/default-1-js.txt');
+    const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/rubber-duckling-lc-1.txt');
+    const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/rubber-duckling-grammar.txt');
 
   </script>
 </body>
