--- a/assets/index.html
+++ b/assets/index.html
@@ -234,11 +234,11 @@
       return editor;
     }
 
-    // const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/default-4-lc.txt');
-    // const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/default-grammar.txt');
+    const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/default-4-lc.txt');
+    const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/default-grammar.txt');
     const editorJS =       setupEditorWithContent("textArea-js",       '/js/default-1-js.txt');
-    const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/rubber-duckling-lc-1.txt');
-    const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/rubber-duckling-grammar.txt');
+    // const editorLivecode = setupEditorWithContent("textArea-livecode", '/langs/rubber-duckling-lc-1.txt');
+    // const editorGrammar =  setupEditorWithContent("textArea-grammar",  '/langs/rubber-duckling-grammar.txt');
 
   </script>
 </body>
