--- a/assets/index.html
+++ b/assets/index.html
@@ -10,17 +10,21 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
+      margin: 0px;
     }
+
     .prettyprint ol.linenums>li {
       list-style-type: decimal
     }
 
     .main-container {
       width: 100%;
+      height: 100%;
       display: grid;
-      grid-template-columns: auto 20px auto;
-      grid-template-rows: 60px 30px auto auto auto 200px;
-      padding-right: 50px;
+      grid-gap: 5px;
+      grid-template-columns: auto 1fr;
+      grid-template-rows: 60px 30px 40px auto 40px 0.5fr;
+      /* margin: 50px; */
     }
 
     .header {
@@ -42,68 +46,133 @@
 
     .editor-header {
       font-weight: bold;
-      /* height: 2em; */
       width: auto;
-      /* margin-bottom: 50px; */
     }
 
-    .editor-container {
-      width: auto;
-      height: 250px;
-      padding-top: 10px;
-      padding-bottom: 10px;
+    .container-lc {
+      grid-row: 4;
+      grid-column: 1/2;
+      display: grid;
+      grid-template-rows: auto 1fr;
       position:relative;
-
-      overflow: hidden; /* CM will manage its own scrollbars. */
+      width: auto;
+      min-width: 20em;
+      /* overflow:auto; */
       resize: both;
-
-      height: 10em; /* A fixed initial height is required in Chrome both for the resize handle to appear and to not fall into a shrinking loop due to the neg. offset in cm_resize()! */
     }
 
     .editor-container-lc {
-      grid-row:4;
-      grid-column: 1/2;
+      grid-row: 2 / 2;
+      width: 100%;
+      height: 100%;
+      position:absolute;
+      overflow: hidden;
+      /* CM will manage its own scrollbars. */
+      /* resize: horizontal; */
+      /*  height: 10em; /* A fixed initial height is required in Chrome both for the resize handle to appear and to not fall into a shrinking loop due to the neg. offset in cm_resize()! */
+    }
+
+    #evalButton {
+      grid-row: 5 / 5;
+      width: 100px;
+      margin-top: 5px;
+    }
+
+    .container-js {
+      grid-row: 4;
+      grid-column: 2 / -1;
       display: grid;
-      grid-template-rows: auto 10em;
-      /* position:absolute; */
-      /* top:50%; */
-      height:10em;
+      grid-template-rows: auto 1fr;
+      position:relative;
       width: auto;
+      /* overflow: auto; */
+      resize: vertical;
+    }
+
+    .editor-container-js {
+      grid-row: 2 /2;
+      width: 100%;
+      height: 100%;
+      /* padding-top: 5px; */
+      position:absolute;
+      overflow: hidden;
+       /* CM will manage its own scrollbars. */
+
+      /* resize: both; */
+      /* height: 10em; A fixed initial height is required in Chrome both for the resize handle to appear and to not fall into a shrinking loop due to the neg. offset in cm_resize()! */
+    }
+
+    #evalJsButton {
+      grid-row: 5 / 5;
+      width: 100px;
+      margin-top: 5px;
+    }
+
+    .container-ge {
+
+      grid-row:6;
+      grid-column: 1/3;
+      display: grid;
+      grid-template-rows: auto 1fr 40px;
+      position:relative;
+      /* top:50%; */
+      height:100%;
+      width: 100%;
+      min-width: 20em;
+      /* max-width: 0.5fr; */
+      /* overflow:hidden; */
+      /* resize: both; */
       /* margin-top:-5em; */
     }
 
     .editor-container-ge {
-      grid-row: 4;
-      grid-column: 3/3;
-      display: grid;
-      grid-template-rows: auto 10em;
-      height:10em;
       width: auto;
-      /* margin-top:-5em; */
+
+
+      grid-row: 2;
+      height: 100%;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      position:absolute;
+      overflow: auto; /* CM will manage its own scrollbars. */
+
+      /* resize: both; */
+      /* height: 10em; A fixed initial height is required in Chrome both for the resize handle to appear and to not fall into a shrinking loop due to the neg. offset in cm_resize()! */
     }
+
+
+
 
 
 
     .commands-container-b {
       grid-row:5;
+      width: auto;
+      /* height: 2em; */
       grid-column: 1 / -1;
       padding-top: 5px;
       padding-bottom: 5px;
     }
 
-    .editor-container-js {
-      grid-row:5;
-      grid-column: 1 / -1;
-      display: grid;
-      grid-template-rows: auto 10em;
-      height:10em;
-      width: auto;
-    }
 
-    .CodeMirror {
+      /* resize: horizontal; */
+      /* margin-top:-5em; */
+
+    /* .CodeMirror {
       border: 1px solid #eee;
       height: 100%;
       width: 100%;
+    } */
+
+    .vertical-slider {
+      line-height: 4px;
+      width: 100%;
+      background-color: #dee2e6;
+      border: none;
+      cursor: ns-resize;
+      user-select: none;
+      /* // disable selection */
+      text-align: center;
     }
 
     /* .textArea-js{
@@ -141,35 +210,34 @@
       <span>You might need to clean the cache when testing your worklet processor code (cmd-shift-backspace/ctrl-shift-backspace)</span>
     </div>
     <div class="commands-container-a">
-      <button id="playButton">Play</button>
-      <button id="stopButton">Stop</button>
+      <button id="playButton">Start Engine</button>
+      <button id="stopButton">Stop Engine</button>
       <button id="plusButton">Vol+</button>
       <button id="minusButton">Vol–</button>
       <button id="loadSamplesButton">Load Samples</button>
       <button id="learnerButton">Create Learner</button>
       <button id="createAnalyserButton">Analyser++</button>
       <button id="mouseButton">Mouse input</button>
+      <span id="outputText"></span>
     </div>
-    <div class="editor-container-lc">
+    <div class="container-lc">
       <span class="editor-header">Livecode Editor</span>
-      <div class="editor-container">
+      <div class="editor-container-lc">
         <textarea id="textArea-livecode"></textarea>
       </div>
       <button id="evalButton">Eval Livecode</button>
     </div>
-    <div class="editor-container-js">
+    <div class="container-js">
       <span class="editor-header">JS Editor</span>
-      <div class="editor-container">
+      <div class="editor-container-js">
         <textarea id="textArea-js"></textarea>
       </div>
       <button id="evalJsButton">Eval JS block</button>
     </div>
-    <div class="commands-container-b">
-      <span id="outputText"></span>
-    </div>
-    <div class="editor-container-ge">
+
+    <div class="container-ge">
       <span class="editor-header">Grammar Editor</span>
-      <div class="editor-container">
+      <div class="editor-container-ge">
         <textarea id="textArea-grammar"></textarea>
       </div>
     </div>
@@ -272,7 +340,6 @@
       await learner.init(document.location.origin); // when Learner initializes
 
       // learner.eval('input = (id,x) => { console.log(id, x); };');
-
     });
 
     $("evalJsButton", async () => {
@@ -287,13 +354,11 @@
     const setupEditorWithContent = ( elementId, contentFileRelativeURL ) => {
 
       let textArea = document.getElementById(elementId);
-
       const editor = CodeMirror.fromTextArea(textArea, {
         // lineWrapping: document.getElementById("linewrap").checked,
         lineWrapping: true,
         lineNumbers: true
       });
-
       let container = textArea.parentElement;
 
       // editor.setSize(container.clientWidth + 2, container.clientHeight )
