--- a/assets/index.html
+++ b/assets/index.html
@@ -22,8 +22,8 @@
       height: 100%;
       display: grid;
       grid-gap: 5px;
-      grid-template-columns: auto 1fr;
-      grid-template-rows: 60px 30px 40px auto 40px 0.5fr;
+      grid-template-columns: 0.75fr 1fr;
+      grid-template-rows: 60px 30px 0.1fr auto 40px 0.45fr;
       /* margin: 50px; */
     }
 
@@ -109,13 +109,9 @@
     }
 
     .container-ge {
-
       grid-row:6;
-      grid-column: 1/3;
-      display: grid;
-      grid-template-rows: auto 1fr 40px;
+      grid-column: 1/ -1;
       position:relative;
-      /* top:50%; */
       height:100%;
       width: 100%;
       min-width: 20em;
@@ -126,10 +122,7 @@
     }
 
     .editor-container-ge {
-      width: auto;
-
-
-      grid-row: 2;
+      width: 100%;
       height: 100%;
       padding-top: 10px;
       padding-bottom: 10px;
@@ -155,32 +148,7 @@
     }
 
 
-      /* resize: horizontal; */
-      /* margin-top:-5em; */
-
-    /* .CodeMirror {
-      border: 1px solid #eee;
-      height: 100%;
-      width: 100%;
-    } */
-
-    .vertical-slider {
-      line-height: 4px;
-      width: 100%;
-      background-color: #dee2e6;
-      border: none;
-      cursor: ns-resize;
-      user-select: none;
-      /* // disable selection */
-      text-align: center;
-    }
-
-    /* .textArea-js{
-      height: 200px;
-      width: 100%;
-    } */
-
-    /* .CodeMirror { height: auto; border: 1px solid #ddd; } */
+    .CodeMirror { border: 1px solid #ddd; }
     /* .CodeMirror-scroll { max-height: 200px; } */
   /* .CodeMirror pre { padding-left: 7px; line-height: 1.25; } */
 
@@ -225,16 +193,15 @@
       <div class="editor-container-lc">
         <textarea id="textArea-livecode"></textarea>
       </div>
-      <button id="evalButton">Eval Livecode</button>
     </div>
+    <button id="evalButton">Eval Livecode</button>
     <div class="container-js">
       <span class="editor-header">JS Editor</span>
       <div class="editor-container-js">
         <textarea id="textArea-js"></textarea>
       </div>
-      <button id="evalJsButton">Eval JS block</button>
     </div>
-
+    <button id="evalJsButton">Eval JS block</button>
     <div class="container-ge">
       <span class="editor-header">Grammar Editor</span>
       <div class="editor-container-ge">
